tests/neg/6314-6.check
-- Error: tests/neg/6314-6.scala:24:18 ---------------------------------------------------------------------------------
24 |    def apply(fa: Bar[X & Foo]): Bar[Y & Foo] = fa // error // error
   |                  ^
   |                  Match type reduction failed since selector X & YY.this.Foo
   |                  is uninhabited (there are no values of that type).
-- Error: tests/neg/6314-6.scala:24:33 ---------------------------------------------------------------------------------
24 |    def apply(fa: Bar[X & Foo]): Bar[Y & Foo] = fa // error // error
   |                                 ^
   |                                 Match type reduction failed since selector Y & YY.this.Foo
   |                                 is uninhabited (there are no values of that type).
-- Error: tests/neg/6314-6.scala:50:18 ---------------------------------------------------------------------------------
50 |    def apply(fa: Bar[X & FooAlias]): Bar[Y & FooAlias] = fa // error // error
   |                  ^
   |                  Match type reduction failed since selector X & YY.this.FooAlias
   |                  is uninhabited (there are no values of that type).
-- Error: tests/neg/6314-6.scala:50:38 ---------------------------------------------------------------------------------
50 |    def apply(fa: Bar[X & FooAlias]): Bar[Y & FooAlias] = fa // error // error
   |                                      ^
   |                                      Match type reduction failed since selector Y & YY.this.FooAlias
   |                                      is uninhabited (there are no values of that type).
